# inference-engine

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  compose.yaml  install.sh  pyproject.toml
arch/sm_61/: Dockerfile  build.sh  requirements.txt
arch/sm_75plus/: Dockerfile  build.sh
config/: frigate-detector.yaml  inference.yaml
inference_engine/: __init__.py  __main__.py  batch.py  broker.py  config.py  engine.py  stats.py  worker.py
inference_engine/engines/: __init__.py  yolo_engine.py
tools/: optimize.py  run-optimize.sh
